# gsq-geochem-portal

./: Taskfile.yml  lambda_function.py  main.py  pyproject.toml
geochem-portal-ui/: package-lock.json
geochem-portal-ui/src/: App.vue  examples.ts
geochem-portal-ui/src/assets/: main.css
geochem-portal-ui/src/assets/validators/: core.ttl  gsq-compounded.ttl  gsq.ttl
geochem-portal-ui/src/components/: Converter.vue  Info.vue  ValidationResults.vue  Validator.vue
geochem-portal-ui/src/router/: index.ts
geochem-portal-ui/src/views/: HomeView.vue  ProfilesView.vue  StandardView.vue  VocabsView.vue
geochem_portal/: app.py  convert.py  models.py  validate.py
geochem_portal/router/: __init__.py  convert.py  validate.py
tests/: test_validate.py
